# hackathon_template

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  Unster.md  docker-compose.yml  encrypt_env.sh  unster-whitepaper-full-rewrite.md
.github/workflows/: ci.yml  deploy-lambda.yml  rust.yaml  s3-sync.yml  self-hosted-runner.yml
FlexNetGX/: README.md  deploy-lambda.sh  deploy.sh
FlexNetGX/flexnet-gx-blockchain/: Cargo.toml  README.md
FlexNetGX/flexnet-gx-blockchain/src/: lib.rs  main.rs
FlexNetGX/flexnet-gx-lambda/: .gitignore  Cargo.toml  README.md  build-lambda.sh
FlexNetGX/flexnet-gx-lambda/src/: main.rs
FlexNetGX/flexnet-gx-mobile/: Cargo.toml  README.md
FlexNetGX/flexnet-gx-mobile/src/: main.rs
FlexNetGX/flexnet-gx-web/: Cargo.toml  README.md  error.html  index.html
FlexNetGX/flexnet-gx-web/src/: lib.rs
FlexNetGX/flexnet-gx-web/static/: adminControlPanel.html  adminDashboard.html  forgotpassword.html  index.html  messages.html  register.html  researchDashboard.html  settings.html  spreadsheet.css  spreadsheet.html  spreadsheet.js  survey.html  userActivity.html  userProfile.html  volunteerDashboard.html  welcome.css  welcome.html  welcome.js
FlexNetGX/flexnet-gx-web/static/css/: adminControlPanel.css  availableSurveys.css  index.css  (+10 more)
FlexNetGX/gx-blockchain/: .gitignore  Cargo.toml  README.md
FlexNetGX/gx-lambda/: .gitignore  Cargo.toml  README.md  build-lambda.sh  test.sh
FlexNetGX/gx-mobile/: .gitignore  Cargo.toml  README.md
FlexNetGX/scripts/: deploy-lambda.sh  deploy.sh  encrypt_env.sh  test.sh
aws/: README.md  add-policy.sh  cloudfront_distribution_A_record.sh  cloudfront_distribution_A_record_template.json  update-cloudfront.sh
aws/policies/: lambda-InvokeFunction.json  lambda-trust-policy-AssumeRole.json  qe-unster-net-cicd-lambda-policy.json  qe-unster-net-cicd-lamda-auth-services.json  qe-unster-net-cicd-logs.json  qe-unster-net-cloudfront-invalidation.json  qe-unster-net-static.json
flexnetgx/: README.md  Unster.md
flexnetgx/FlexNetGX/: README.md  deploy-lambda.sh  deploy.sh
flexnetgx/FlexNetGX/flexnet-gx-blockchain/: .gitignore  README.md
flexnetgx/FlexNetGX/flexnet-gx-lambda/: Cargo.toml
flexnetgx/FlexNetGX/flexnet-gx-mobile/: .gitignore
flexnetgx/FlexNetGX/flexnet-gx-web/: .gitignore  README.md
html/: qe-dataAdmin-Researcher.html  qe-dataVolunteer.html  qe-mainInlineAdmin.html  qe-mainInlineResearcher.html  qe-mainInlineVolunteer.html  qe-profile.html  qe-settings.html
html/html-extra/: cv-carouselFramelessSidetoSide.html  cv-iframesProgressBarCarousel.html
html/old-qe/: qe-IframesBarGraph.html  qe-iframeMyProfile.html  qe-iframePieChart.html  qe-iframesBarChart.html  qe-iframesDataAdmin.html  qe-iframesDotChart.html  qe-iframesLineChart.html  qe-iframesMainInlineAdmin.html  qe-iframesNotes.html  qe-iframesSettings.html  qe-iframesWorkspace.html
json/: bearer_tokens.json
lambda_functions/file-test/: Cargo.toml
lambda_functions/file-test/src/: main.rs
lambda_functions/hello-world/: Cargo.toml
lambda_functions/hello-world/src/: main.rs
scripts/: 1_setup.sh  2_setup-dev.sh  2_setup.sh  DANGER.sh  README.md
static/: error.html  index.html  qe-adminManagement.html
static/css/: styles.css
static/js/: admin-management.js
workflows/: s3-sync.yml
(+39 files in other folders)
