[workspace]
members = [
    "FlexNetGX/gx-web",
    "FlexNetGX/gx-lambda",
    "FlexNetGX/gx-mobile",
    "FlexNetGX/gx-blockchain"
]

[workspace.dependencies]
# Common dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

# gx-web dependencies
yew = "0.21"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlElement", "Window", "Document"] }
gloo = "0.10"

# gx-lambda dependencies
aws-config = "1.0"
aws-sdk-dynamodb = "1.0"
aws-sdk-s3 = "1.0"
aws-sdk-cognito-idp = "1.0"
lambda_runtime = "0.8"
tower-http = { version = "0.4", features = ["cors"] }

# Development dependencies
wasm-bindgen-test = "0.3"
mockall = "0.11"
tokio-test = "0.4"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[profile.dev]
opt-level = 0
debug = true